Added some basic functions to model